--- a/projects/ixocreate/ngx-admin/src/lib/views/resource/create/resource-create.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/resource/create/resource-create.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="card-body">
       <ng-container *ngIf="form && fields; else isLoading">
-        <formly-form [form]="form" [fields]="fields" class="kiwi-form kiwi-form-inline" (ngSubmit)="onSubmit()">
+        <formly-form [form]="form" [fields]="fields" [model]="data" class="kiwi-form kiwi-form-inline" (ngSubmit)="onSubmit()">
         </formly-form>
       </ng-container>
       <ng-template #isLoading>
