--- a/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
@@ -297,3 +297,9 @@
     border-radius: $border-radius;
   }
 }
+
+.modal-content .datatable-card {
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+}
