--- a/projects/ixocreate/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -159,10 +159,10 @@
   </div>
   <div class="text-right" *ngIf="type === 'select'">
     <button class="btn btn-sm btn-danger" (click)="onDeSelect(row)" *ngIf="isSelected(row.id)">
-      <i class="fa fa-minus"></i> Remove
+      <i class="fa fa-minus"></i> Deselect
     </button>
     <button class="btn btn-sm btn-primary" (click)="onSelect(row)" *ngIf="!isSelected(row.id)">
-      <i class="fa fa-plus"></i> Add
+      <i class="fa fa-plus"></i> Select
     </button>
   </div>
 </ng-template>
