user index back to advanced search

--- a/projects/ixocreate/ngx-admin/src/lib/views/user/user.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/user/user.component.html
@@ -4,6 +4,6 @@
   </ng-template>
 
   <ng-container>
-    <kiwi-datatable [apiUrl]="apiUrl"></kiwi-datatable>
+    <kiwi-datatable [apiUrl]="apiUrl" [advancedSearch]="true"></kiwi-datatable>
   </ng-container>
 </kiwi-content>
