--- a/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
@@ -303,3 +303,37 @@
   border-right: 0;
   border-bottom: 0;
 }
+
+.border-radius {
+  border-radius: $border-radius;
+}
+
+.transparent-img-bg {
+  display: inline-block;
+  @include transparent-img-bg;
+
+  a {
+    display: inline-block;
+  }
+}
+
+.table-img {
+  max-width: 80px;
+  height: auto;
+  margin: 0;
+}
+
+.table-media-icon {
+  max-width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  border-radius: $border-radius;
+
+  .file-icon {
+    display: block;
+    color: $input-border-color;
+  }
+}
