--- a/projects/ixocreate/ngx-admin/src/scss/custom/_media.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_media.scss
@@ -34,6 +34,10 @@
   border-radius: $input-border-radius;
   cursor: pointer;
 
+  &.is-image {
+    @include transparent-img-bg;
+  }
+
   &.is-invalid {
     border-color: $danger;
 
