fix not available locale

--- a/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
@@ -389,6 +389,10 @@ formly-wrapper-validation-messages > div > .invalid-feedback {
   }
 }
 
+.input-group > .form-control {
+  height: auto;
+}
+
 .input-disabled {
   pointer-events: none;
   opacity: .3;
