--- a/projects/ixocreate/ngx-admin/src/lib/components/kiwi-image-cropper/kiwi-image-cropper.component.scss
+++ b/projects/ixocreate/ngx-admin/src/lib/components/kiwi-image-cropper/kiwi-image-cropper.component.scss
@@ -1,3 +1,5 @@
+@import "../../../scss/variables-include";
+
 .cropper-holder {
   display: flex;
   position: relative;
@@ -19,6 +21,7 @@
     .source-image {
       max-width: 100%;
       max-height: 100%;
+      @include transparent-img-bg;
     }
   }
 
