--- a/projects/ixocreate/ngx-admin/src/lib/components/kiwi-date-picker/kiwi-date-picker.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/kiwi-date-picker/kiwi-date-picker.component.html
@@ -1,7 +1,19 @@
-<p-calendar [placeholder]="placeholder"
-            [(ngModel)]="dateValue"
-            [dateFormat]="dateFormat"
-            [locale]="locale"
-            [showTime]="showTime"
-            [class.is-invalid]="showError">
-</p-calendar>
+<div class="calendar-group">
+  <input type="text"
+         class="form-control"
+         [(ngModel)]="formatedDate"
+         (change)="onChange($event)"
+         [placeholder]="placeholder"
+         [class.is-invalid]="showError">
+  <div class="calender-overlay" [hidden]="!showOverlay">
+    <p-calendar class="date-picker"
+                [inline]="true"
+                [placeholder]="placeholder"
+                [(ngModel)]="dateValue"
+                [locale]="locale"
+                [showTime]="showTime"
+                [class.is-invalid]="showError"
+    >
+    </p-calendar>
+  </div>
+</div>
