--- a/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
@@ -56,6 +56,10 @@ $form-element-spacer: .5rem;
   }
 }
 
+.input-group-text {
+  overflow: hidden;
+}
+
 a.input-group-text {
   &:hover {
     text-decoration: none;
