added logo width

--- a/projects/ixocreate/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
@@ -1,6 +1,6 @@
 <app-header
   [fixed]="true"
-  [navbarBrandFull]="{src: config.config.project.logo, width: 150, height: 45, alt: config.config.project.name }"
+  [navbarBrandFull]="{src: config.config.project.logo.image, width: config.config.project.logo.width, height: config.config.project.logo.height, alt: config.config.project.name }"
   [navbarBrandMinimized]="{src: config.config.project.icon, width: 35, height: 35, alt: config.config.project.name }"
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="false"
