--- a/projects/ixocreate/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/account/account.component.html
@@ -1,18 +1,69 @@
 <ixo-content>
-  <ng-container *ngIf="accountData.user$ | async as user">
+  <ng-container *ngIf="accountData.user$ | async as user; else isLoading">
     <div class="row">
-      <div class="col-md">
-        <form [formGroup]="emailForm" (ngSubmit)="onSubmitEmail()" class="ixocreate-form">
+      <div class="col-xl-6">
+        <form [formGroup]="localeForm" (ngSubmit)="onSubmitLocale()" class="ixo-form ixo-form-inline"
+              *ngIf="localeForm && localeFormFields; else isLoading">
+          <div class="card card-accent-primary">
+            <div class="card-header custom-card-header">
+              <h6 class="mb-0"><b>Locale, Language & Timezone</b></h6>
+            </div>
+            <div class="card-body">
+              <formly-form [form]="localeForm"
+                           [fields]="localeFormFields"
+                           [options]="localeFormOptions"
+                           [model]="user"></formly-form>
+            </div>
+            <div class="card-footer d-lg-flex justify-content-between align-items-center">
+              <div class="text-muted">
+                <b class="text-danger">*</b> Required Field
+              </div>
+              <button type="submit" class="btn btn-primary">
+                <i class="fa fa-save"></i> Update
+              </button>
+            </div>
+          </div>
+        </form>
+        <ng-container *ngIf="attributesForm && attributesFormFields">
+          <div class="card card-accent-primary" *ngIf="attributesFormFields.length > 0">
+            <div class="card-header custom-card-header">
+              <h6 class="mb-0"><b>Attributes</b></h6>
+            </div>
+            <div class="card-body">
+              <formly-form [form]="attributesForm"
+                           [fields]="attributesFormFields"
+                           [model]="user.accountAttributes"
+                           class="ixo-form ixo-form-inline"></formly-form>
+            </div>
+            <div class="card-footer d-lg-flex justify-content-between align-items-center">
+              <div class="text-muted">
+                <b class="text-danger">*</b> Required Field
+              </div>
+              <button type="submit" class="btn btn-primary"
+                      [disabled]="!attributesForm.valid"
+                      (click)="onSubmitAttributes()">
+                <i class="fa fa-save"></i> Update
+              </button>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+      <div class="col-xl-6">
+        <form [formGroup]="emailForm" (ngSubmit)="onSubmitEmail()" class="ixo-form ixo-form-inline">
           <div class="card card-accent-primary">
             <div class="card-header custom-card-header">
               <h6 class="mb-0">Change <b>Email</b></h6>
             </div>
             <div class="card-body">
               <div class="form-group">
-                <label>Your current email</label>
-                <input type="text" class="form-control" placeholder="{{ user.email }}" readonly>
+                <label class="ixo-form-label">Current email address</label>
+                <div class="ixo-form-control-container">
+                  <input type="text" class="form-control" placeholder="{{ user.email }}" readonly>
+                </div>
               </div>
-              <formly-form [form]="emailForm" [fields]="emailFormFields" [options]="emailFormOptions"></formly-form>
+              <formly-form [form]="emailForm"
+                           [fields]="emailFormFields"
+                           [options]="emailFormOptions"></formly-form>
             </div>
             <div class="card-footer d-lg-flex justify-content-between align-items-center">
               <div class="text-muted">
@@ -24,22 +75,22 @@
             </div>
           </div>
         </form>
-      </div>
-      <div class="col-md">
-        <form [formGroup]="passwordForm" (ngSubmit)="onSubmitPassword()" class="ixocreate-form">
+        <form [formGroup]="passwordForm" (ngSubmit)="onSubmitPassword()" class="ixo-form ixo-form-inline">
           <div class="card card-accent-primary">
             <div class="card-header custom-card-header">
               <h6 class="mb-0">Change <b>Password</b></h6>
             </div>
             <div class="card-body">
-              <formly-form [form]="passwordForm" [fields]="passwordFormFields"
+              <formly-form [form]="passwordForm"
+                           [fields]="passwordFormFields"
                            [options]="passwordFormOptions"></formly-form>
             </div>
             <div class="card-footer d-lg-flex justify-content-between align-items-center">
               <div class="text-muted">
                 <b class="text-danger">*</b> Required Field
               </div>
-              <button type="submit" class="btn btn-primary" [disabled]="!passwordForm.valid">
+              <button type="submit" class="btn btn-primary"
+                      [disabled]="!passwordForm.valid">
                 <i class="fa fa-save"></i> Change Password
               </button>
             </div>
@@ -47,31 +98,10 @@
         </form>
       </div>
     </div>
-    <ng-container *ngIf="additionalForm && additionalFields; else isLoading">
-      <div class="card card-accent-primary" *ngIf="additionalFields.length > 0">
-        <div class="card-header custom-card-header">
-          <h6 class="mb-0">Edit <b>Attributes</b></h6>
-        </div>
-        <div class="card-body">
-          <formly-form [form]="additionalForm" [fields]="additionalFields" [model]="user.accountAttributes"
-                       class="ixo-form ixo-form-inline"></formly-form>
-        </div>
-        <div class="card-footer d-lg-flex justify-content-between align-items-center">
-          <div class="text-muted">
-            <b class="text-danger">*</b> Required Field
-          </div>
-          <button type="submit" class="btn btn-primary" [disabled]="!additionalForm.valid"
-                  (click)="onSubmitAttributes()">
-            <i class="fa fa-save"></i> Update Attributes
-          </button>
-        </div>
-      </div>
-    </ng-container>
-    <ng-template #isLoading>
-      <div class="text-center my-3 loading">
-        <ixo-loading class="big-center"></ixo-loading>
-      </div>
-    </ng-template>
   </ng-container>
-
+  <ng-template #isLoading>
+    <div class="text-center my-3 loading">
+      <ixo-loading class="big-center"></ixo-loading>
+    </div>
+  </ng-template>
 </ixo-content>
