less padding on mobile

--- a/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
@@ -34,6 +34,10 @@
 
 .main .container-fluid {
   padding: 0 25px;
+
+  @include media-breakpoint-down(sm) {
+    padding: 0 15px;
+  }
 }
 
 .card-header {
