--- a/projects/ixocreate/ngx-admin/src/scss/_variables.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/_variables.scss
@@ -5,3 +5,7 @@ $title-container-background: #ffffff !default;
 $input-placeholder-color: #ccc;
 
 $aside-menu-width: 275px;
+
+// Ixo Variables
+
+$ixo-form-label-width: 175px !default;
