localized datepicker input format

--- a/projects/ixocreate/ngx-admin/src/lib/components/ixo-date-picker/ixo-date-picker.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/ixo-date-picker/ixo-date-picker.component.html
@@ -1,7 +1,7 @@
 <div class="calendar-group">
   <input type="text"
          class="form-control"
-         [(ngModel)]="formatedDate"
+         [(ngModel)]="formattedDate"
          (change)="onChange($event)"
          [placeholder]="placeholder"
          [class.is-invalid]="showError">
