--- a/projects/ixocreate/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/ngx-admin.scss
@@ -21,6 +21,7 @@
 @import "vendor/map";
 @import "custom/mixins";
 @import "custom/layout";
+@import "custom/button";
 @import "custom/loading";
 @import "custom/media";
 @import "custom/sitemap";
